--- a/css/styles.css
+++ b/css/styles.css
@@ -115,6 +115,17 @@ h1 {
   font-style: normal;
 }
 
+/* Ive added this style to edit the image*/
+.quote-image {
+  width: 100%; 
+  height: 150px; 
+  border-radius: 10px;  
+  background-size: cover; 
+  background-repeat: no-repeat; 
+  background-position: center;
+  margin-bottom: 12px;
+}
+
 @media (min-width: 768px) {
   body {
     padding: 25px;
